corrected some mistakes

--- a/public/app/templates/event/event-detail.html
+++ b/public/app/templates/event/event-detail.html
@@ -50,7 +50,7 @@
                         </tr>
                         <tr>
                             <th class="text-right">Description:</th>
-                            <td>{{event.cat.pricePerPerson}}</td>
+                            <td>{{event.cat.description}}</td>
                         </tr>
                         <tr>
                             <th class="text-right">Kitchen:</th>
